--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
         <!-- ***************************************************************** -->
         
         <!--*******************************************************************  -->
-        <section class="title">
+        <img src="/images/background_layer.png" alt="">
+        <!-- <section class="title">
             <div class="container">
                 <nav class="flex-nav">
                     <div class="nav-items">
@@ -80,7 +81,7 @@
                     </div>
                 </section>
             </div>
-        </section>
+        </section> -->
     </header>
 </section>
     
