--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.0.0/css/font-awesome.min.css">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons+Symbols+Outlined"> -->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined"
+      rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
@@ -43,7 +45,53 @@
             </div>
             <div class="title">
                 <div class="background">
-                    
+                    <div class="navbar">
+                        <div class="container">
+                            <div class="logo">
+                                <h1>PASCO</h1>
+                            </div>
+                            <div class="nav-left">
+                                <ul>
+                                    <li id="push-right"><a href="#">HOME<i class="fa-solid fa-angle-down"></i></a></li>
+                                    <li><a href="#">PORTFOLIO<i class="fa-solid fa-angle-down"></i></a></li>
+                                    <li><a href="#">BLOG<i class="fa-solid fa-angle-down"></i></a></li>
+                                    <li><a href="#">PAGES<i class="fa-solid fa-angle-down"></i></a></li>
+                                    <li><a href="#">SHOP<i class="fa-solid fa-angle-down"></i></a></li>
+                                    <li><a href="#">COMPONENTS<i class="fa-solid fa-angle-down"></i></a></li>
+                                    <li><a href="#">FEATURES<i class="fa-solid fa-angle-down"></i></a></li>
+                                </ul>
+                            </div>
+                            <div class="nav-right">
+                                <ul>
+                                    <li><a href="#"><i class="fa-solid fa-magnifying-glass"></i></a></li>
+                                    <div class="v-sep1"></div>
+                                    <li><a href="#"><i class="fa-regular fa-heart"></i></a></li>
+                                    <div class="v-sep2"></div>
+                                    <li><a href="#"><i class="fa-solid fa-cart-shopping"></i></a></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="center">
+                        <div class="container center-container">
+                            <div class="center-items">
+                                <h1>INSPIRATION</h1>
+                                <p>5 WAYS MILLLENNIALS CAN START BUILDING THEIR FUTURE TODAY</p>
+                                <button>READ MORE</button>
+                            </div>
+                            <div class="profile">
+                                <img src="/images/profile-pic.png" alt="profile-pic">
+                                <div>
+                                    <h5>Henry Little</h5>
+                                    <h5>April 2016, 10:15</h5>
+                                </div>
+                                <div id="comment-likes">
+                                    <div><span class="material-icons-outlined" id="comment">question_answer</span>Comments(28)</div>
+                                    <div><span class="material-icons-outlined" id="likes">favorite_border</span>Likes(07)</div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
