--- a/index.html
+++ b/index.html
@@ -83,11 +83,11 @@
                                 <img src="/images/profile-pic.png" alt="profile-pic">
                                 <div>
                                     <h5>Henry Little</h5>
-                                    <h5>April 2016, 10:15</h5>
+                                    <h6>April &nbsp;28 , 2016&nbsp;&nbsp; 10:15</h6>
                                 </div>
-                                <div id="comment-likes">
-                                    <div><span class="material-icons-outlined" id="comment">question_answer</span>Comments(28)</div>
-                                    <div><span class="material-icons-outlined" id="likes">favorite_border</span>Likes(07)</div>
+                                 <div id="comment-likes">
+                                    <div class="comment"><span class="material-icons-outlined">question_answer</span>Comments (28)</div>
+                                    <div class="likes"><span class="material-icons-outlined">favorite_border</span>Likes (07)</div>
                                 </div>
                             </div>
                         </div>
@@ -95,6 +95,22 @@
                 </div>
             </div>
         </div>
+        <main>
+            <div class="main-nav">
+                <div class="container">
+                    <div class="sort-blog">
+                        <h5>SORT BLOG:</h5>
+                        <ul>
+                            <li><button type="submit" id="selected">ALL</button></li>
+                            <li><button type="submit">PHOTOGRAPHY</button></li>
+                            <li><button type="submit">LIFESTYLE</button></li>
+                            <li><button type="submit">TRIP</button></li>
+                            <li><button type="submit">INSPIRATION</button></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </main>
     </section>
 </body>
 </html>
