--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                                 <button>READ MORE</button>
                             </div>
                             <div class="profile">
-                                <img src="/images/profile-pic.png" alt="profile-pic">
+                                <img src="./images/profile-pic.png" alt="profile-pic">
                                 <div>
                                     <h5>Henry Little</h5>
                                     <h6>April &nbsp;28 , 2016&nbsp;&nbsp; 10:15</h6>
