--- a/index.html
+++ b/index.html
@@ -110,6 +110,21 @@
                     </div>
                 </div>
             </div>
+            <div class="main-content">
+                <div class="grid-container">
+                    <div class="grid1">
+                        <div>
+                           <img src="./images/Layer 48.png" alt=""> 
+                        </div>
+                    </div>
+                    <div class="grid2 grid-row-span2">
+                        TWO
+                    </div>
+                    <div class="btn-more">
+                        
+                    </div>
+                </div>
+            </div>
         </main>
     </section>
 </body>
