grid created in main body

--- a/index.html
+++ b/index.html
@@ -111,18 +111,25 @@
                 </div>
             </div>
             <div class="main-content">
+                <div class="gap"></div>
                 <div class="grid-container">
-                    <div class="grid1">
-                        <div>
-                           <img src="./images/Layer 48.png" alt=""> 
-                        </div>
-                    </div>
-                    <div class="grid2 grid-row-span2">
-                        TWO
-                    </div>
-                    <div class="btn-more">
-                        
-                    </div>
+                   <div class="grid-1">
+                       <div class ="grid-1-items "id="grid-1">1</div>
+                       <div class ="grid-1-items "id="grid-2">2</div>
+                       <div class ="grid-1-items "id="grid-3">3</div>
+                       <div class ="grid-1-items "id="grid-4">4</div>
+                       <div class ="grid-1-items "id="grid-5">5</div>
+                       <div class ="grid-1-items "id="grid-6">6</div>
+                       <div class ="grid-1-items "id="grid-7">7</div>
+                       <div class ="grid-1-items "id="grid-8">8</div>
+                       <div class ="grid-1-items "id="grid-9">9</div>
+                       <div class ="grid-1-items "id="grid-10">10</div>
+                       <div class ="grid-1-items "id="grid-11">11</div>
+                       <div class ="grid-1-items "id="grid-12">12</div>
+                   </div>
+                   <div class="grid-2">
+
+                   </div>
                 </div>
             </div>
         </main>
