--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.0.0/css/font-awesome.min.css">
-    <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons+Symbols+Outlined"> -->
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined"
-      rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <title>Document</title>
 </head>
 <body>
@@ -32,7 +31,7 @@
                     </div>
                     <div class="top-right">
                         <div class="sign">
-                            <a href=""><i class="fa-solid fa-circle-user"></i>SIGN IN</i></a>
+                            <a href=""><i class="fa-solid fa-circle-user"></i>SIGN IN</a>
                         </div>
                         <div class="v-sep">
 
@@ -63,11 +62,13 @@
                             </div>
                             <div class="nav-right">
                                 <ul>
-                                    <li><a href="#"><i class="fa-solid fa-magnifying-glass"></i></a></li>
+                                    <li><a href="#"><i class="fa-solid fa-magnifying-glass search"></i></a></li>
                                     <div class="v-sep1"></div>
-                                    <li><a href="#"><i class="fa-regular fa-heart"></i></a></li>
+                                    <li><a href="#"><i class="fa-regular fa-heart heart"></i></a></li>
                                     <div class="v-sep2"></div>
-                                    <li><a href="#"><i class="fa-solid fa-cart-shopping"></i></a></li>
+                                    <li><a href="#"><span class="material-symbols-rounded">
+                                        shopping_cart
+                                        </span></a></li>
                                 </ul>
                             </div>
                         </div>
@@ -80,14 +81,14 @@
                                 <button>READ MORE</button>
                             </div>
                             <div class="profile">
-                                <img src="./images/profile-pic.png" alt="profile-pic">
+                                <div class="profile-img"><img src="./images/profile-pic.png" alt="profile-pic"></div>
                                 <div>
                                     <h5>Henry Little</h5>
                                     <h6>April &nbsp;28 , 2016&nbsp;&nbsp; 10:15</h6>
                                 </div>
                                  <div id="comment-likes">
-                                    <div class="comment"><span class="material-icons-outlined">question_answer</span>Comments (28)</div>
-                                    <div class="likes"><span class="material-icons-outlined">favorite_border</span>Likes (07)</div>
+                                    <div class="comment"><span class="material-icons-outlined" id="comment">question_answer</span>Comments (28)</div>
+                                    <div class="likes"><span class="material-icons-outlined" id="likes">favorite_border</span>Likes (07)</div>
                                 </div>
                             </div>
                         </div>
@@ -111,24 +112,23 @@
                 </div>
             </div>
             <div class="main-content">
-                <div class="gap"></div>
                 <div class="grid-container">
                    <div class="grid-1">
-                       <div class ="grid-1-items "id="grid-1">1</div>
-                       <div class ="grid-1-items "id="grid-2">2</div>
-                       <div class ="grid-1-items "id="grid-3">3</div>
-                       <div class ="grid-1-items "id="grid-4">4</div>
-                       <div class ="grid-1-items "id="grid-5">5</div>
-                       <div class ="grid-1-items "id="grid-6">6</div>
-                       <div class ="grid-1-items "id="grid-7">7</div>
-                       <div class ="grid-1-items "id="grid-8">8</div>
-                       <div class ="grid-1-items "id="grid-9">9</div>
-                       <div class ="grid-1-items "id="grid-10">10</div>
-                       <div class ="grid-1-items "id="grid-11">11</div>
-                       <div class ="grid-1-items "id="grid-12">12</div>
+                       <div class="grid-1-container">
+                           <div class ="grid-1-items "id="grid-1-1">1</div>
+                           <div class ="grid-1-items "id="grid-1-2">2</div>
+                           <div class ="grid-1-items "id="grid-1-3">3</div>
+                           <div class ="grid-1-items "id="grid-1-4">4</div>
+                           <div class ="grid-1-items "id="grid-1-5">5</div>
+                           <div class ="grid-1-items "id="grid-1-6">6</div>
+                           <div class ="grid-1-items "id="grid-1-7">7</div>
+                       </div>
+                    
                    </div>
-                   <div class="grid-2">
-
+                   <div class="grid-2 ">
+                   </div>
+                   <div class="btn-more">
+                    <div class="more"><a href="#"><i class="fa-regular fa-circle-right"></i></a></div>
                    </div>
                 </div>
             </div>
