--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
             </div>
             <div class="title">
                 <div class="background">
+                    <!-- <a href=""><i class="fa-solid fa-angle-left"></i></a>
+                    <a href=""><i class="fa-solid fa-angle-right"></i></a> -->
                     <div class="navbar">
                         <div class="container">
                             <div class="logo">
@@ -93,6 +95,7 @@
                             </div>
                         </div>
                     </div>
+                   
                 </div>
             </div>
         </div>
@@ -115,20 +118,43 @@
                 <div class="grid-container">
                    <div class="grid-1">
                        <div class="grid-1-container">
-                           <div class ="grid-1-items "id="grid-1-1">1</div>
+                           <div class ="grid-1-items "id="grid-1-1">
+                                <div class="item-1-container">
+                                    <section class="bg-item-1">
+                                        <div><a href="#"><i class="fa-regular fa-circle-play"></i></a></div>
+                                        <div>
+                                            <h6>LIFESTYLE</h6>
+                                            <div><span class="material-icons-outlined">question_answer</span>7
+                                                <span class="material-icons-outlined">favorite_border</span>15
+                                            </div>
+                                        </div>
+                                    </section>
+                                    <div>
+                                        <h3>10 Things To Do To Change Your Life Forever</h3>
+                                        <p>The one constant thing in our life is change. We cannot avoid it and the more we resist change the tougher our life becomes. I know this because I was very skilled at deflecting change in life.</p>
+                                    </div>
+                                    <div>
+                                        <img src="./images/Photo.png" alt="">
+                                        <h5>Henry Little</h5>
+                                        <h6>April &nbsp;28 , 2016&nbsp;&nbsp; 10:15</h6>
+                                        <a href="#"><i class="fa-solid fa-ellipsis-vertical"></i></a>
+                                    </div>
+                                </div>
+                           </div>
                            <div class ="grid-1-items "id="grid-1-2">2</div>
                            <div class ="grid-1-items "id="grid-1-3">3</div>
                            <div class ="grid-1-items "id="grid-1-4">4</div>
                            <div class ="grid-1-items "id="grid-1-5">5</div>
                            <div class ="grid-1-items "id="grid-1-6">6</div>
                            <div class ="grid-1-items "id="grid-1-7">7</div>
+                           <div class ="grid-1-items "id="grid-1-8">8</div>
+                           <div class ="grid-1-items "id="grid-1-9">9</div>
                        </div>
-                    
                    </div>
                    <div class="grid-2 ">
                    </div>
                    <div class="btn-more">
-                    <div class="more"><a href="#"><i class="fa-regular fa-circle-right"></i></a></div>
+                    <div class="more"><a href="#"><i class=1fa-regular fa-circle-right"></i></a></div>
                    </div>
                 </div>
             </div>
