Header is finally over

--- a/index.html
+++ b/index.html
@@ -83,10 +83,12 @@
                                 <button>READ MORE</button>
                             </div>
                             <div class="profile">
-                                <div class="profile-img"><img src="./images/profile-pic.png" alt="profile-pic"></div>
+                                <div class="img-profile">
+                                    <div class="profile-img"><img src="./images/profile-pic.png" alt="profile-pic"></div>
+                                </div>
                                 <div>
                                     <h5>Henry Little</h5>
-                                    <h6>April &nbsp;28 , 2016&nbsp;&nbsp; 10:15</h6>
+                                    <h6>April 28,&nbsp;2016&nbsp;&nbsp; 10:15</h6>
                                 </div>
                                  <div id="comment-likes">
                                     <div class="comment"><span class="material-icons-outlined" id="comment">question_answer</span>Comments (28)</div>
@@ -122,14 +124,15 @@
                                 <div class="item-1-container">
                                     <section class="bg-item-1">
                                         <div><a href="#"><i class="fa-regular fa-circle-play"></i></a></div>
-                                        <div>
+                                        <div class="inner-bg">
                                             <h6>LIFESTYLE</h6>
-                                            <div><span class="material-icons-outlined">question_answer</span>7
-                                                <span class="material-icons-outlined">favorite_border</span>15
+                                            <div>
+                                                <div class="question-ans"><span class="material-icons-outlined">question_answer</span>7</div>
+                                                <div class="like"><span class="material-icons-outlined">favorite_border</span>15</div>
                                             </div>
                                         </div>
                                     </section>
-                                    <div>
+                                    <div class="grid-1">
                                         <h3>10 Things To Do To Change Your Life Forever</h3>
                                         <p>The one constant thing in our life is change. We cannot avoid it and the more we resist change the tougher our life becomes. I know this because I was very skilled at deflecting change in life.</p>
                                     </div>
